<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.delta.familyradar.ToolbarPreference
        android:key="toolbar"
        app:layout="@layout/setting_toolbar"

        />
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/messages_header"

        >

        <PreferenceScreen
            app:iconSpaceReserved="false"
            app:key="@string/account"
            app:title="Account"

            app:useSimpleSummaryProvider="true" />

        <PreferenceScreen
            app:iconSpaceReserved="false"
            app:key="@string/manage"
            app:title="Manage Groups"
            app:useSimpleSummaryProvider="true" />
        <PreferenceScreen
            app:dialogTitle="Account"
            app:iconSpaceReserved="false"
            app:key="@string/member"
            app:title="Membership"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="Others">

        <PreferenceScreen
            app:iconSpaceReserved="false"
            app:key="sync"
            app:title="Privacy" />

        <PreferenceScreen
            app:dependency="sync"
            app:iconSpaceReserved="false"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="Support" />
        <PreferenceScreen
            app:iconSpaceReserved="false"
            app:key="sync"
            app:title="Vote" />
        <PreferenceScreen
            app:iconSpaceReserved="false"
            app:key="sync"
            app:title="Logout" />


    </PreferenceCategory>


</PreferenceScreen>